--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#FFFFFF"
+    android:background="@color/whitegading"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
@@ -16,6 +16,7 @@
         android:textStyle="bold"
         android:gravity="center"
         android:padding="16dp"
+        android:layout_marginTop="20dp"
         android:background="@color/headerBlue"
         android:textColor="#FFFFFF" />
 
