--- a/app/src/main/res/layout/activity_jadwal.xml
+++ b/app/src/main/res/layout/activity_jadwal.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.jadwal.JadwalFragment">
+    tools:context=".ui.jadwal.JadwalFragment"
+    android:background="@color/whitegading">
 
     <!-- HEADER -->
     <TextView
