--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,18 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.home.HomeFragment"
+    android:background="@color/whitegading">
 
     <!-- HEADER -->
     <TextView
         android:id="@+id/header_title"
         android:layout_width="0dp"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:background="@color/headerBlue"
-        android:gravity="center_vertical"
-        android:paddingStart="24dp"
+        android:gravity="center"
+        android:paddingStart="0dp"
         android:paddingTop="0dp"
-        android:text="Pilih Fasilitas"
+        android:text="PILIH FASILITAS"
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -61,7 +62,7 @@
                         android:gravity="center"
                         android:padding="24dp"
                         android:text="Lapangan Badminton"
-                        android:textColor="@color/black"
+                        android:textColor="@color/grey"
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
@@ -69,21 +70,22 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:padding="16dp">
+                        android:padding="16dp"
+                        android:background="@color/white">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="4dp"
                             android:text="Lapangan Badminton"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/grey"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
+                            android:text="Badminton adalah olahraga raket yang menggerakan seluruh anggota badanmu"
                             android:textColor="@color/textGray"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -111,7 +113,7 @@
                         android:gravity="center"
                         android:padding="24dp"
                         android:text="Lapangan Futsal"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/grey"
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
@@ -119,21 +121,22 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:padding="16dp">
+                        android:padding="16dp"
+                        android:background="@color/white">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="4dp"
                             android:text="Lapangan Futsal"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/grey"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
+                            android:text="Bermain kompetitif bersamaa tim kebanggaanmu dengan olahraga futsal!"
                             android:textColor="@color/textGray"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -152,7 +155,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:background="@color/white">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -161,7 +165,7 @@
                         android:gravity="center"
                         android:padding="24dp"
                         android:text="Billiard"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/grey"
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
@@ -176,14 +180,14 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="4dp"
                             android:text="Billiard"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/grey"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
+                            android:text="Butuh permainan strategi dan keakuratan. Biliard solusinya!"
                             android:textColor="@color/textGray"
                             android:textSize="14sp" />
                     </LinearLayout>
