--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,13 +5,15 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="headerBlue">#2196F3</color>
-    <color name="badmintonGreen">#A5D6A7</color>
-    <color name="futsalGray">#BDBDBD</color>
-    <color name="billiardCyan">#80DEEA</color>
+    <color name="headerBlue">#0D47A1</color>
+    <color name="badmintonGreen">#1565C0</color>
+    <color name="futsalGray">#1976D2</color>
+    <color name="billiardCyan">#42A5F5</color>
     <color name="bottomNavBlack">#212121</color>
     <color name="textGray">#757575</color>
     <color name="black">#000000</color>
-    <color name="white">#000000</color>
+    <color name="grey">#263238</color>
+    <color name="white">#ffff</color>
     <color name="Default_lapangan_badminton">#1C9FAE</color>
+    <color name="whitegading">#F5F7FA</color>
 </resources>
