--- a/app/src/main/res/layout/activity_tambah_slot.xml
+++ b/app/src/main/res/layout/activity_tambah_slot.xml
@@ -47,6 +47,7 @@
                     android:layout_height="wrap_content"
                     android:text="Pilih Fasilitas"
                     android:textStyle="bold"
+                    android:textColor="@color/black"
                     android:layout_marginBottom="4dp" />
 
                 <Spinner
@@ -64,6 +65,7 @@
                     android:background="@drawable/bg_input"
                     android:padding="12dp"
                     android:layout_marginTop="16dp"
+                    android:textColor="@color/black"
                     android:textColorHint="@android:color/darker_gray" />
 
                 <!-- Tanggal -->
@@ -72,7 +74,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="Tanggal"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="@color/black"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -87,7 +90,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Senin, 6 Juli 2025"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:textColor="@color/black"/>
 
                     <ImageButton
                         android:id="@+id/icon_calendar"
