--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,15 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/headerBlue</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/fasumicon</item>
+        <item name="postSplashScreenTheme">@style/Theme.Kelompok4</item>
 
     </style>
+
+
+
 </resources>
